fix navbar typo

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">Our हमारा
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">हमारा
                                                                 मिशन
                                                             </h5>
                                                             <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
